# srcbot

./: Cargo.toml  README.md  flake.nix
nix/: eval-intermediates.nix
src/: cache.rs  check_all.rs  cli.rs  commands.rs  fix_hash.rs  full_eval.rs  full_eval_types.rs  git.rs  github.rs  main.rs  nix.rs  simple.rs  summary.rs  types.rs
