[package]
name = "srcbot"
version = "0.1.0"
edition = "2021"
description = "Verify nixpkgs PR source fetches correctly by rebuilding with fresh sources"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tempfile = "3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
num_cpus = "1"
futures = "0.3"
dirs = "5"
regex = "1"
